cabal-version:      2.4
name:               ant-stm-demo
version:            0.1.0.0
synopsis:
    Demo of Software Transactional Memory involving ants walking on a 2D grid

-- A longer description of the package.
-- description:
homepage:           https://github.com/mx00s/ant-stm-demo

-- A URL where users can report bugs.
-- bug-reports:
license:            Apache-2.0
license-file:       LICENSE
author:             Sage Mitchell
maintainer:         dev@mx00s.com

-- A copyright notice.
-- copyright:
category:           Concurrency
extra-source-files: CHANGELOG.md

library
    exposed-modules:  AntStmDemo,
                      AntStmDemo.Ant,
                      AntStmDemo.Coordinate,
                      AntStmDemo.Config,
                      AntStmDemo.Grid,
                      AntStmDemo.Report

    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.1.0,
                      aeson ^>=1.5,
                      containers ^>= 0.6,
                      random ^>= 1.0,
                      random-shuffle ^>= 0.0.4,
                      stm ^>= 2.5,
                      text ^>= 1.2
    hs-source-dirs:   src
    default-language: Haskell2010
    ghc-options:      -Wall

executable ant-stm-demo
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.1.0,
        aeson ^>=1.5,
        stm ^>= 2.5,
        ant-stm-demo

    hs-source-dirs:   app
    default-language: Haskell2010
    ghc-options:      -Wall

test-suite ant-stm-demo-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.14.1.0
    ghc-options:      -Wall
